4.10.1 fix(mapjs): Fix selected link outline:
- `mapjs/site/mapjs-default-styles.css`: Update selected link
(purple dashed) outline to 1.5px since 1px invisible in chrome sometimes

--- a/mapjs/site/mapjs-default-styles.css
+++ b/mapjs/site/mapjs-default-styles.css
@@ -199,7 +199,8 @@ div[data-mapjs-role=stage] {
 }
 
 .selected-link .mapjs-link {
-	outline: 1px dashed #8e22e0;
+	/* 1px outline doesn't always show up in chrome. */
+	outline: 1.5px dashed #8e22e0;
 }
 
 .drag-shadow {
